# tutorials-crossfit-streamlit

./: .coverage  .gitattributes  Makefile  Pipfile  README.md  athletes.duckdb  docker-common.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  readme.md  ruff.toml  style.css
.github/agents/: implementation.agents.md  planner.agents.md  tester.agents.md  tutor.agents.md
.github/instructions/: docstrings.instructions.md
.streamlit/: config.toml
backend/: Dockerfile  database.py  models.py  predict.py  pyproject.toml  requirements.txt  routes.py  run5k_predictor.model  trainer.py
backend/tests/: test_routes.py  test_routes_integration.py
docs/: 0001-record-architecture-decisions.md  0002-test.md  0003-duckdb.md  0004-fastapi.md
docs/diagrams/: prediction.excalidraw
frontend/: .coverage  .gitattributes  Dockerfile  convert.py  main.py  pyproject.toml  requirements.txt  script.js
frontend/.streamlit/: config.toml
frontend/pages/: dashboard.py  profile.py
frontend/src/: api.py  plot.py
frontend/test/: test_app.py  test_profile.py
frontend/utils/: constants.py  helpers.py  logger.py
src/: plot.py
test/: test_app.py
utils/: constants.py  helpers.py
