[project]
name = ""
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]",
    "duckdb",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.10",
]

[tool.uv]
package = false
